test/scc/stmt/semantic-errors/056.a
056.t:8:9: error: duplicate case value